# redacta

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/workflows/: on_commit.yml
src/: fqdn.rs  ipv4.rs  ipv6.rs  lib.rs  macros.rs  main.rs  redact.rs  regex.rs
tests/: performance.rs
