[package]
name = "redacta"
version = "0.0.1"
edition = "2024"
description = "Command line tool for redacting information from text."
keywords = ["tool", "redact"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/lhalf/redacta"
exclude = [".gitignore", "justfile", "/.github"]

[dependencies]
anyhow = { version = "1.0.98", default-features = false}
regex = { version = "1.11.1", default-features = false, features = ["unicode-case"]}
clap = { version = "4.5.41", default-features = false, features = ["std", "derive", "help", "usage"] }

[dev-dependencies]
colored = { version = "3.0.0", default-features = false }